--- a/pizzaria/src/Components/Menu/Menu.css
+++ b/pizzaria/src/Components/Menu/Menu.css
@@ -19,7 +19,7 @@
   
   .header-logo img {
     height: auto;
-    max-width: 100%;
+    max-width: 120%;
     width: 4rem;
   }
   
@@ -27,6 +27,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-left: 1rem;
   }
   
   .header-title h1 {
@@ -44,7 +45,7 @@
   .header-links {
     display: flex;
     align-items: center;
-    margin-left: 53.5rem;
+    margin-left: 52.5rem;
     font-size: 1.2rem;
   }
   
@@ -81,4 +82,3 @@
   .header-action-button:focus {
     outline: none;
   }
-  
