--- a/pizzaria/src/Components/Sobre/Sobre.css
+++ b/pizzaria/src/Components/Sobre/Sobre.css
@@ -1,22 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&family=Nothing+You+Could+Do&family=Pacifico&family=Poetsen+One&family=Signika+Negative:wght@300..700&display=swap');
+
+:root {
+  --font-poetsen-one: 'Poetsen One', sans-serif;
+  --font-nothing-you-could-do: 'Nothing You Could Do', cursive;
+  --font-signika-negative: 'Signika Negative', sans-serif;
+}
+
 .about-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-image: url('cimento.jpg'); /* Substitua 'caminho/para/sua/imagem.jpg' pelo caminho da sua imagem */
-    background-size: cover; /* Para garantir que a imagem cubra todo o container */
-    background-position: center; /* Para centralizar a imagem */
+    position: relative;
+    height: 60%;
+    overflow: hidden;
 }
 
+.about-container::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('cimento.jpg');
+    background-size: cover;
+    background-position: center;
+    filter: brightness(20%);
+    z-index: -1; /* Garante que a imagem de fundo esteja atrás de todo o conteúdo */
+}
 
 .image-container {
     flex: 1;
-    margin-right: 20px; /* Espaçamento entre a imagem e o texto */
+    margin-right: 20px;
 }
 
-.-image {
+.image-container img {
     width: 100%;
     height: auto;
+    filter: brightness(70%);
 }
 
 .text-container {
@@ -26,5 +48,17 @@
 .text-container p {
     font-size: 1rem;
     line-height: 1.5;
-    color: white; /* Cor do texto */
+    color: white;
+    text-align: center;
+    z-index: 1; /* Garante que o texto esteja acima da imagem de fundo */
+    font-family: var(--font-nothing-you-could-do);
+}
+
+.text-container h2 {
+    font-size: 2rem;
+    line-height: 1.5;
+    color: orange;
+    text-align: center;
+    z-index: 1; /* Garante que o texto esteja acima da imagem de fundo */
+    font-family: var(--font-nothing-you-could-do);
 }
