--- a/pizzaria/src/Components/Principal/Principal.css
+++ b/pizzaria/src/Components/Principal/Principal.css
@@ -1,62 +1,62 @@
-@import url('https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&family=Nothing+You+Could+Do&family=Pacifico&family=Poetsen+One&family=Signika+Negative:wght@300..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&family=Nothing+You+Could+Do&family=Pacifico&family=Poetsen+One&family=Signika+Negative:wght@300..700&display=swap");
 
 :root {
-  --font-poetsen-one: 'Poetsen One', sans-serif;
-  --font-nothing-you-could-do: 'Nothing You Could Do', cursive;
-  --font-signika-negative: 'Signika Negative', sans-serif;
+  --font-poetsen-one: "Poetsen One", sans-serif;
+  --font-nothing-you-could-do: "Nothing You Could Do", cursive;
+  --font-signika-negative: "Signika Negative", sans-serif;
 }
 
 .video-container {
-    position: relative;
-    width: 100%;
-    height: 85vh;
+  position: relative;
+  width: 100%;
+  height: 85vh;
 }
 
 .fullscreen-video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    filter: brightness(20%);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: brightness(20%);
 }
 
 .text-overlay {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    opacity: 1;
-    z-index: 1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  opacity: 1;
+  z-index: 1;
 }
 
 .text-overlay h2 {
-    color: white;
-    font-family: var(--font-poetsen-one);
-    font-size: 2rem;
-    font-weight: 400;
-    font-style: normal;
-    margin-bottom: 0;
-    opacity: 1;
+  color: white;
+  font-family: var(--font-poetsen-one);
+  font-size: 2rem;
+  font-weight: 400;
+  font-style: normal;
+  margin-bottom: 0;
+  opacity: 1;
 }
 
 .welcome {
-    color: orange;
-    font-family: var(--font-nothing-you-could-do);
-    font-size: 3rem;
-    margin-bottom: 0;
-    line-height: 1;
-    font-weight: 400;
-    opacity: 1;
+  color: orange;
+  font-family: var(--font-nothing-you-could-do);
+  font-size: 3rem;
+  margin-bottom: 0;
+  line-height: 1;
+  font-weight: 400;
+  opacity: 1;
 }
 
 .text-overlay p:not(.welcome) {
-    color: white;
-    font-family: var(--font-signika-negative);
-    font-weight: 400;
-    font-style: normal;
-    margin-bottom: 0;
-    opacity: 1;
+  color: white;
+  font-family: var(--font-signika-negative);
+  font-weight: 400;
+  font-style: normal;
+  margin-bottom: 0;
+  opacity: 1;
 }
