--- a/font-end/pizzaria/src/App.css
+++ b/font-end/pizzaria/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+.App {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.App-content {
+  flex: 1;
+}
