--- a/font-end/pizzaria/src/Pages/Pizza/ListarPizza/ListarPizza.css
+++ b/font-end/pizzaria/src/Pages/Pizza/ListarPizza/ListarPizza.css
@@ -1,25 +1,69 @@
-.grid-container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
-  }
-  
-  .grid-item {
-    border: 1px solid #ccc;
-    padding: 10px;
-  }
-  
-  .pizza-image {
-    max-width: 158px;
-    max-height: 158px;
-    width: auto;
-    height: auto;
-  }
-  
-  
+/* General styles */
+body {
+  font-family: 'Arial', sans-serif;
+  color: #fff;
+  background-image: url('landing-bg.270db7f8775652679ffe.webp');
+}
+
+.container {
+  width: 90%;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 20px;
+  color: #ffcc00;
+}
+
+/* Grid styles */
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+.grid-item {
+  background-color: transparent;
+
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+  width: 300px;
+  margin: 10px;
+  text-align: center;
+  transition: transform 0.2s;
+}
+
+.grid-item:hover {
+  transform: scale(1.05);
+}
+
+.pizza-image-container {
+  position: relative;
+  width: 100%;
+  height: 300px;
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pizza-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  clip-path: circle(50%);
+}
+
+h3 {
+  margin: 10px 0;
+  color: #ffcc00;
+}
+
+p {
+  padding: 0 10px;
+  color: #ccc;
+}
