--- a/font-end/pizzaria/src/Pages/Login/Login.css
+++ b/font-end/pizzaria/src/Pages/Login/Login.css
@@ -8,7 +8,17 @@
 .login-form {
   display: flex;
   flex-direction: column;
-  align-items: flex;
   width: 100%;
   max-width: 400px;
+}
+
+.login-title {
+  text-align: center;
+  color: #333;
+}
+
+.mensagem {
+  color: #000;
+  text-align: center;
+  margin-top: 20px;
 }
