--- a/font-end/pizzaria/src/Pages/Pizza/ListarPizza/ListarPizza.css
+++ b/font-end/pizzaria/src/Pages/Pizza/ListarPizza/ListarPizza.css
@@ -1,9 +1,3 @@
-/* General styles */
-body {
-  font-family: 'Arial', sans-serif;
-  color: #fff;
-}
-
 .background-container {
   background-image: url('landing-bg.270db7f8775652679ffe.webp');
   background-size: cover;
@@ -18,7 +12,7 @@ body {
   padding: 20px;
 }
 
-h2 {
+.pizza-title {
   text-align: center;
   margin-bottom: 20px;
   color: #ffcc00;
@@ -63,12 +57,17 @@ h2 {
   clip-path: circle(50%);
 }
 
-h3 {
+.pizza-subtitle {
   margin: 10px 0;
   color: #ffcc00;
 }
 
-p {
+.pizza-description {
   padding: 0 10px;
   color: #ccc;
+}
+
+.error-message {
+  text-align: center;
+  color: red;
 }
