--- a/font-end/pizzaria/src/Components/Menu/Menu.css
+++ b/font-end/pizzaria/src/Components/Menu/Menu.css
@@ -1,18 +1,26 @@
+/* Menu.css */
+
 .header-container {
-  display: flex;
-  flex-direction: column;
+  position: fixed;
+  top: 0;
   width: 100%;
+  background-color: #121618;
+  z-index: 1000;
 }
 
 .header-bottom {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #121618;
   padding: 1.5rem 2rem;
 }
 
 .header-left {
+  display: flex;
+  align-items: center;
+}
+
+.header-right {
   display: flex;
   align-items: center;
 }
@@ -45,7 +53,6 @@
 .header-links {
   display: flex;
   align-items: center;
-  margin-left: 52.5rem;
   font-size: 1.2rem;
 }
 
@@ -57,11 +64,6 @@
 
 .header-links a.active {
   color: yellow;
-}
-
-.header-right {
-  display: flex;
-  align-items: center;
 }
 
 .header-actions {
@@ -81,10 +83,8 @@
 .header-action-button:focus {
   outline: none;
 }
-/* Menu.css */
+
 .header-links .active {
   color: yellow;
   cursor: pointer;
 }
-
-
