--- a/font-end/pizzaria/src/Components/Principal/Principal.css
+++ b/font-end/pizzaria/src/Components/Principal/Principal.css
@@ -60,3 +60,20 @@
   margin-bottom: 0;
   opacity: 1;
 }
+
+.montar-pizza-button {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: orange;
+  color: white;
+  text-decoration: none;
+  font-size: 1.5em;
+  font-family: var(--font-signika-negative);
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.montar-pizza-button:hover {
+  background-color: darkorange;
+}
