--- a/font-end/pizzaria/src/Pages/Pizza/ListarPizza/ListarPizza.css
+++ b/font-end/pizzaria/src/Pages/Pizza/ListarPizza/ListarPizza.css
@@ -67,6 +67,14 @@
   color: #ccc;
 }
 
+.pizza-valor {
+  color: #ccc;
+}
+
+.pizza-tamanho {
+  color: #ccc;
+}
+
 .error-message {
   text-align: center;
   color: red;
