--- a/font-end/pizzaria/src/Pages/CriarConta/criar-conta.css
+++ b/font-end/pizzaria/src/Pages/CriarConta/criar-conta.css
@@ -13,3 +13,12 @@
   width: 100%;
   max-width: 400px;
 }
+
+.criar-conta-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.custom-button {
+    margin-top: 10px;
+}
