--- a/font-end/pizzaria/src/Components/Sobre/Sobre.css
+++ b/font-end/pizzaria/src/Components/Sobre/Sobre.css
@@ -23,7 +23,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("cimento.jpg");
+  background-image: url("../../../public/cimento.jpg");
   background-size: cover;
   background-position: center;
   filter: brightness(20%);
