--- a/font-end/pizzaria/src/Pages/Carrinho/Carrinho.css
+++ b/font-end/pizzaria/src/Pages/Carrinho/Carrinho.css
@@ -6,10 +6,10 @@
 }
 
 .carrinho-items {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 20px;
-  justify-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px; /* Espaço entre os itens */
   margin-top: 20px;
 }
 
