--- a/font-end/pizzaria/src/Pages/Pizza/MontarPizza/MontarPizza.css
+++ b/font-end/pizzaria/src/Pages/Pizza/MontarPizza/MontarPizza.css
@@ -1,11 +1,3 @@
-.error-message {
-  color: black;
-}
-
-.mensagem {
-  color: black;
-}
-
 .montar-pizza-container {
   padding: 20px;
   max-width: 600px;
@@ -13,6 +5,7 @@
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
+  margin-top: 20px;
 }
 
 .montar-pizza-container h2 {
@@ -27,26 +20,39 @@
   gap: 20px;
 }
 
-.montar-pizza-container label {
-  font-family: var(--font-signika-negative);
-  color: #333;
+.form-group {
+  display: flex;
+  flex-direction: column;
 }
 
-.montar-pizza-container select,
-.montar-pizza-container button {
+.form-group label {
+  font-family: var(--font-signika-negative);
+  color: #333;
+  margin-bottom: 5px;
+}
+
+.form-group select,
+.form-group button {
   padding: 10px;
   font-size: 1rem;
   border-radius: 5px;
   border: 1px solid #ccc;
   font-family: var(--font-signika-negative);
+  width: 100%;
+  box-sizing: border-box;
 }
 
-.montar-pizza-container button {
+.add {
   background-color: orange;
   color: white;
   border: none;
   cursor: pointer;
   transition: background-color 0.3s;
+  height: 50px;
+  width:50%;
+  border-radius: 10px;
+  font-size: 1.2rem;
+  margin: 0 auto;
 }
 
 .montar-pizza-container button:hover {
@@ -64,6 +70,7 @@
   font-family: var(--font-signika-negative);
   text-align: center;
 }
+
 .dialog-overlay {
   position: fixed;
   top: 0;
