--- a/font-end/pizzaria/src/Pages/ListarPedidos/PedidoList.css
+++ b/font-end/pizzaria/src/Pages/ListarPedidos/PedidoList.css
@@ -1,46 +1,50 @@
-/* PedidoList.css */
-
 table {
     width: 100%;
     border-collapse: collapse;
-    margin-bottom: 20px; /* Espaçamento inferior para separação */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra suave */
-    border-radius: 8px; /* Cantos arredondados */
+    margin-bottom: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
 }
 
 th, td {
-    border: 1px solid #dddddd; /* Borda leve */
+    border: 1px solid #dddddd;
     padding: 12px;
     text-align: left;
 }
 
 th {
-    background-color: #f0f0f0; /* Cor de fundo para cabeçalho */
-    color: #333333; /* Cor do texto do cabeçalho */
-    font-weight: bold; /* Texto em negrito */
+    background-color: #f0f0f0; 
+    color: #333333; 
+    font-weight: bold; 
 }
 
 td {
-    background-color: #ffffff; /* Cor de fundo das células */
+    background-color: #ffffff;
 }
+
 
 .error-message {
     color: red;
     font-weight: bold;
-    margin-top: 10px; /* Espaçamento superior para separação */
+    margin-top: 10px; 
 }
 
-/* Estilos para a coluna "Itens do Pedido" */
 ul {
-    list-style-type: none; /* Remove marcadores da lista */
+    list-style-type: none;
     padding: 0;
 }
 
 ul li {
-    margin-bottom: 5px; /* Espaçamento inferior entre itens da lista */
+    margin-bottom: 5px;
 }
 
 ul li strong {
-    margin-right: 5px; /* Espaçamento à direita para separação dos elementos strong */
+    margin-right: 5px;
     font-weight: bold;
+}
+
+
+.footer-total {
+    text-align: center;
+    padding-top: 10px;
 }
